--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 Hello There! This is the default content of my site.
+
+The site can be accessed anytime by typing 'https://sumansourav.github.io/' on your Browser search bar
