Updated project images

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/collaboration.png" />
+                        <img src="images/collaboration_p.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -177,7 +177,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/blockchain_wallet.png" />
+                        <img src="images/blockchain_wallet_p.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -203,7 +203,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/flights.png" />
+                        <img src="images/flights_p.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -226,7 +226,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/sentiment.png" />
+                        <img src="images/sentiment_p.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -252,7 +252,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/cannalytics.png" />
+                        <img src="images/cannalytics_p.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -276,7 +276,7 @@
 				
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/super_data_science.png" />
+                        <img src="images/super_data_science_p.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
