--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2018 Suman Sourav Dikshit
+                        Copyright &copy; 2018 Note: Some images used have owner's copyrights.
                         <br><a href="https://github.com/RyanFitzgerald/devportfolio">Check out the template</a>
                     </p>
                 </div>
