Added resume and a new project

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Suman Sourav</h1>
             <h2>Product | Data | Code</h2>
-            <!--<a href="#" class="btn-rounded-white" >Download Resume</a> -->
+            <a href="res/Suman Sourav Dikshit_resume.pdf" class="btn-rounded-white" >View Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Technology products, music and good food never fail to excite me!
+                        Technology products, music and good food never fail to excite me! Beyond that I am still soul-searching :) Will take me a while to put more words here.
                     </p>
                 </div>
             </div>
@@ -147,6 +147,35 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/navazon_p.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>AMS Analytics, a collaboration with University of Washington and Navazon Consulting</h3>
+                        <p>
+                            Skills used: Data Analysis, Amazon Marketing Services, Digital Ad Campaigns & Consulting 
+							
+						<ul>
+							<li>
+								Recommended product marketing strategies to increase a vendor customer conversion rate by analysing and A/B testing ad campaigns on Amazon Marketing Services (AMS):
+							</li>
+							<li>
+								Identified improvement areas and formulated hypothesis to carry out further testing.
+							</li>
+							<li>
+								A/B Tested the hypotheses and analyzed data to come up with final recommendations. Got budget approved from the vendor.
+							</li>
+						</ul>
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/collaboration_p.png" />
@@ -203,6 +232,32 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/panasonic_p.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Data Driven Product Strategies</h3>
+                        <p>
+                            Skills used: Data Analysis, User Reviews
+						<ul>
+							<li>
+								Executed this interesting academic project using a step-by-step data driven approach to recommend product feature investment and competitive pricing strategies for Panasonic, a leading TV manufacturer.
+							</li>
+							<li>
+								Ranked Panasonic among other manfacturers in different features and prioritized features to be improved
+							</li>
+							<li>
+								Identified upside sales potential for TVs priced below average price for a segment.
+							</li>
+                        </p>
+                        <a href="https://github.com/sumansourav/DataDrivenProductStrategies">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/flights_p.png" />
                     </div>
                     <!-- End .project-image -->
@@ -234,11 +289,9 @@
                         <p>
                             Skills used: Python, Sentiment Analysis, Facebook Graph APIs
 						<ul>
-							<li>
-								Implemented a sentiment data processing system by using Graph APIs and OSS sentiment analysis libraries.
+							<li>Implemented a sentiment data processing system by using Graph APIs and OSS sentiment analysis libraries.
 							</li>
-							<li>
-								Performed dominant sentiment comparisons between online news content providers(Ex: CNN, Faking News, NBC, etc.)
+							<li>Performed dominant sentiment comparisons between online news content providers(Ex: CNN, Faking News, NBC, etc.)
 							</li>
 							<li>
 								Concluded that lighthearted sentiments are dominant in sarcastic news contents and mixed reactions in mainstream news posts.
@@ -332,6 +385,7 @@
 			<li>Statistical tests</li>
             <li>A/B Testing</li>
             <li>Google Analytics</li>
+			<li>Amazon Marketing Services</li>
             <li>Tableau</li>
             <li>Balsamiq</li>
             <li>Wire framing</li>
@@ -343,7 +397,7 @@
         <h2>Any queries, comments or protests :)</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/dsumansourav@gmail.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
+                <input type="hidden" name="_subject" value="Email from your personal website visitor" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
@@ -358,7 +412,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2018 Note: Some images used have owner's copyrights.
+                        Copyright &copy; 2018 Note: Some images used have owners' copyrights.
                         <br><a href="https://github.com/RyanFitzgerald/devportfolio">Check out the template</a>
                     </p>
                 </div>
