--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                     <div class="project-info">
                         <h3>Canalytics - Cannabis Intelligence</h3>
                         <p>
-                            Skills used: Skills used: Python, Tableau
+                            Skills used: Python, Tableau
 						<ul>
 							<li>
 								Identified under-explored customer bins and visualized daily footfall trends by analysing Ponder dispensary customer segmentation and footfall data
