Added interstride project

--- a/index.html
+++ b/index.html
@@ -150,6 +150,32 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/interstride_p.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Interstride App - Feature requests for Foster School of Business</h3>
+                        <p>
+                            Skills used: Requirements Analysis, User pain points analysis
+						<ul>
+							<li>
+								Identified pain points of international students in Foster School of Business and helped the Graduate Career Centre to evaluate Interstride App and propose customer features.
+							</li>
+						</ul>
+                        </p>
+                        <a href="https://github.com/sumansourav/AppEvaluationFoster">View Report</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+    <div id="projects" class="background-alt">
+        <h2 class="heading">Projects</h2>
+        <div class="container">
+            <div class="row">
+
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/navazon_p.png" />
                     </div>
                     <!-- End .project-image -->
@@ -170,7 +196,7 @@
 							</li>
 						</ul>
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">View Project(In Progress)</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
